--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -4,6 +4,9 @@
 - skill: Education
   description: Developed and maintained various conference talks, online training, and in-person trainings covering various topics including Git, GitHub, and Open Source.
 
+- skill: Software Development
+  description: Knowledge of HTML, CSS, PHP, JavaScript, JQuery, Java, Android Framework, SQL
+
 # Leadership
 - skill: Leadership
   description: Managed multiple asynchronous teams in the development, maintenance, and release of various web applications and websites.
