--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: MSc Software Development  
+  uni: Queen's University Belfast
+  year: September, 2017 &mdash; December, 2018
   # awards:
   # summary:
