Amend education.yml

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,5 +1,5 @@
 # Degree
-- degree: MSc Software Development  
+- degree: Software Development  
   uni: Queen's University Belfast
   year: September, 2017 &mdash; December, 2018
   # awards:
